fix: dark mode

--- a/frontend/styles/User.module.css
+++ b/frontend/styles/User.module.css
@@ -237,3 +237,9 @@
     opacity: 0.05;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .user {
+    color-scheme: light;
+  }
+}
